@@ -1,6 +1,7 @@
 Revision history for Perl extension PGXN-Meta-Validator.
 
 0.11.0
+      - Added `validate_pgxn_meta`.
 
 0.10.0  2011-05-25T05:33:38
       - Initial public release on CPAN.
